updated use of java.util API
Signed-off-by: Konstantin Läufer <laufer@cs.luc.edu>